# server/utils/Swagger.js
@@ -9,6 +9,9 @@ const pathTagMap = {
   "/requestdemo": "RequestDemo",
   "/student": "Student",
   "/teacher": "Teacher",
+  "/class": "Class",
+  "/section": "Section",
+  "/subject": "Subject",
   "/permission": "Permission",
   "/helpcenter": "HelpCenter",
 };
@@ -25,6 +28,9 @@ const doc = {
     { name: "RequestDemo", description: "Demo request endpoints" },
     { name: "Student", description: "Student profile management" },
     { name: "Teacher", description: "Teacher profile management" },
+    { name: "Class", description: "Class profile management" },
+    { name: "Section", description: "Section profile management" },
+    { name: "Subject", description: "Subject profile management" },
     { name: "Permission", description: "Element access control management" },
     { name: "General", description: "General endpoints" },
     { name: "HelpCenter", description: "Help Center article management" },
